# dv-transaction-trace

./: .envrc  .gitignore  CMakeLists.txt  README.md  ivpm.yaml
docs/: README.md  api_reference.rst  concepts.rst  conf.py  examples.rst  index.rst
python/dv_transaction_trace/: __init__.py  api.py
python/dv_transaction_trace/impl/: README.md  __init__.py  perfetto_impl.py
src/: dvtt.cpp  dvtt_impl.h
src/include/: dvtt.h
src/sv/: dvtt.sv  dvtt_macros.svh
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  README.md  test_basic.cpp  test_parent_child.py  test_perfetto_validation.py  test_protocol_api.py  test_python_impl.py
